# cpp-tech-test

./: CMakeLists.txt  README.md
elaborated/: CMakeLists.txt
elaborated/src/: CMakeLists.txt  graph.cpp  graph.h  main.cpp
elaborated/test/: CMakeLists.txt  elaborated_test.cpp
simple/: CMakeLists.txt  graph.cpp  graph.h  main.cpp
